# catan-bot

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  JOURNAL_DE_BORD.md  Makefile  PLAN.yaml  PROMPTS.md  QUICKSTART.md  README.md  TEST_COVERAGE_REPORT.md  demo_gui.py  demo_gui_setup.py  play_gui.py  pyproject.toml  requirements.txt
catan/: __init__.py
catan/app/: __init__.py  event_bus.py  events.py  game_service.py
catan/engine/: __init__.py  actions.py  board.py  rules.py  serialize.py  state.py
docs/: README.md  architecture.md  catanatron-study.md  gui-h2h.md  overview.md  rl-objectives.md  rl-tutorial.md  schemas.md  specs.md
src/: __init__.py  simulate.py
tests/: README.md  __init__.py  sim_test_utils.py  test_board.py  test_board_contract.py  test_construction.py  test_development_cards.py  test_dice_and_distribution.py  test_game_service.py  test_game_state.py  test_gui_app.py  test_gui_construction_controller.py  test_gui_development_controller.py  test_gui_geometry.py  test_gui_hud_controller.py  test_gui_setup_controller.py  test_gui_setup_integration.py  test_gui_smoke.py  test_gui_trade_controller.py  test_gui_turn_controller.py  test_integration.py  test_legal_actions.py  test_player.py  test_random_board.py  test_rl_actions.py  test_rl_features.py  test_rl_network.py  test_rl_policies.py  test_rl_self_play.py  test_rules_variant_contract.py  test_serialization.py  test_setup_phase.py  test_sim_headless.py  test_sim_parallel.py  test_titles.py  test_trade_bank.py  test_trade_player.py  test_valid_actions.py  test_victory_conditions.py
(+31 files in other folders)
