[project]
name = "catanbot"
version = "0.1.0"
description = "Superhuman Catan bot using reinforcement learning"
requires-python = ">=3.10"
authors = [{name = "Thomas Lefort"}]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
