[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["catan*"]
exclude = ["external*", "tests*"]

[project]
name = "catan"
version = "0.1.0"
description = "Catan game engine with RL bot"
requires-python = ">=3.9"
dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pygame>=2.5.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
    "ignore:pkg_resources is deprecated:UserWarning:pygame.pkgdata",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
